--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!-- header start -->
 
-<a href="{{ site.github.url }}" class="logo-readium"><span class="logo" style="background-image: url({{ site.logo }})"></span></a>
+<a href="{{ site.github.url }}" class="logo-readium"><span class="logo" style="background-image: url({{ site.logo | prepend: site.github.url }})"></span></a>
 
 <!-- header end -->
