--- a/css/main.sass
+++ b/css/main.sass
@@ -11,7 +11,7 @@
 $rs: 16px
 
 $font-serif: Linux Libertine
-$font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
+$font-sans: "Apple SD Gothic Neo", "Nanum Barun Gothic","Malgun Gothic","맑은 고딕","Noto Sans",Dotum,"돋움",sans-serif
 
 
 @mixin respond-to($breakpoint)
