--- a/css/main.sass
+++ b/css/main.sass
@@ -154,12 +154,12 @@ body
         &:hover
           text-decoration: none
     .post-excerpt
-      letter-spacing: -0.02em
       font-weight: 300
       font-style: normal
-      font-size: 20px
-      line-height: 1.3
+      font-size: 16px
+      line-height: 1.45
       color: #666665
+      text-indent : 1em
     .post-meta
       font-size: 14px
       color: #b3b3b1
