--- a/css/main.sass
+++ b/css/main.sass
@@ -159,7 +159,7 @@ body
       font-size: 16px
       line-height: 1.45
       color: #666665
-      text-indent : 1em
+      text-indent : .35em
     .post-meta
       font-size: 14px
       color: #b3b3b1
@@ -367,7 +367,7 @@ body
       letter-spacing: -0.02em
       font-weight: 700
       font-style: normal
-      font-size: 24px
+      font-size: 22px
       line-height: 1.3
       margin: 0
       font-family: $font-sans
@@ -376,17 +376,17 @@ body
       letter-spacing: -0.02em
       font-weight: 700
       font-style: normal
-      font-size: 32px
+      font-size: 28px
       line-height: 1.2
       padding-top: 31px
       margin-bottom: 4px
     p
       font-weight: 400
       font-style: normal
-      font-size: 22px
-      line-height: 30px
+      font-size: 16px
+      line-height: 24px
       margin: 0
-      padding-bottom: 30px
+      padding-bottom: 24px
       color: #333
       -webkit-hyphens: auto
       -moz-hyphens: auto
