--- a/css/main.sass
+++ b/css/main.sass
@@ -388,6 +388,7 @@ body
       margin: 0
       padding-bottom: 24px
       color: #333
+      text-indent : .35em
       -webkit-hyphens: auto
       -moz-hyphens: auto
       hyphens: auto
