--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -106,7 +106,7 @@
       </article>
     </main>
     <div class="bottom-closer">
-      <div class="background-closer-image" {%if site.cover %} style="background-image: url({{ site.cover }})"{% endif %}>
+      <div class="background-closer-image" {%if site.cover %} style="background-image: url({{ site.cover  | prepend: site.github.url }})"{% endif %}>
         Image
       </div>
       <div class="inner">
