--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,7 +69,7 @@
           <div class="isLeft">
             <h5 class="index-headline featured"><span>Written by</span></h5>
             <section class="author">
-              <div class="author-image" style="background-image: url({{site.author_image}})">Blog Logo</div>
+              <div class="author-image" style="background-image: url({{site.author_image | prepend : site.github.url}})">Blog Logo</div>
               <h4>{{ site.author }}</h4>
               <p class="bio">{{author.bio}}</p>
               <hr>
